--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.13",
+    "@tanstack/react-query": "^4.32.6",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.72.3"
   },
@@ -19,6 +22,8 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
+    "@react-navigation/native": "^6.1.7",
+    "@tanstack/eslint-plugin-query": "^4.32.5",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
@@ -26,7 +31,10 @@
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
+    "miragejs": "^0.1.47",
     "prettier": "^2.4.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
