--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
+    "json-server": "^0.17.3",
     "metro-react-native-babel-preset": "0.76.7",
     "miragejs": "^0.1.47",
     "prettier": "^2.4.1",
